--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,9 @@ services:
       - "3000:3000"
     command: bash -c "npm install && npm run start"
     working_dir: /app
+    environment:
+      - DATABASE_HOST=${DATABASE_HOST}
+      - PORT=3000
     volumes:
       - ./back:/app
     networks:
