--- a/front/package.json
+++ b/front/package.json
@@ -18,7 +18,6 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
-    "dotenv": "^16.4.7",
     "front-pokedex": "file:",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -28,6 +27,7 @@
     "@angular-devkit/build-angular": "^18.2.12",
     "@angular/cli": "^18.2.12",
     "@angular/compiler-cli": "^18.2.0",
+    "@ngx-env/builder": "^19.0.4",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^22.10.2",
     "jasmine-core": "~5.2.0",
