--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,10 @@ services:
     image: node:22.12
     ports:
       - "8081:4200"
-    command: bash -c "npm install && npm run start"
+    command: bash -c "npm install && npm run build && npm run start"
     working_dir: /app
+    environment:
+      - NG_APP_URL="toto"
     volumes:
       - ./front:/app
     networks:
