--- a/front/.env
+++ b/front/.env
@@ -1,1 +1,2 @@
-NG_APP_URL=https://rnyu05s278.execute-api.eu-west-3.amazonaws.com/prod/
+# NG_APP_URL=https://rnyu05s278.execute-api.eu-west-3.amazonaws.com/prod/
+NG_APP_URL=http://localhost:3000/
