--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ services:
   front:
     image: node:22.12
     ports:
-      - "80:4200"
+      - "80:3000"
     command: bash -c "npm install && npm run build && npm run start"
     working_dir: /app
     volumes:
-      - ./front:/app
+      - ./front2:/app
     networks:
       - default
   
