--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   front:
     image: node:22.12
     ports:
-      - "80:3000"
+      - "80:4200"
     command: bash -c "npm install && npm run build && npm run start"
     working_dir: /app
     volumes:
@@ -17,7 +17,7 @@ services:
     command: bash -c "npm install && npm run start"
     working_dir: /app
     environment:
-      - DATABASE_HOST=${DATABASE_HOST}
+      - DATABASE_HOST=35.181.57.227
       - PORT=3000
     volumes:
       - ./back:/app
