--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     command: bash -c "npm install && npm run start"
     working_dir: /app
     environment:
-      - DATABASE_HOST=35.181.57.227
+      - DATABASE_HOST=${DATABASE_HOST}
       - PORT=3000
     volumes:
       - ./back:/app
