--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       - "80:4200"
     command: bash -c "npm install && npm run build && npm run start"
     environment:
-      - BACK_HOST=${BACK_HOST}
+      - REACT_APP_BACK_HOST=${BACK_HOST}
     working_dir: /app
     volumes:
       - ./front2:/app
