--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       - "80:4200"
     command: bash -c "npm install && npm run build && npm run start"
     environment:
-      - REACT_APP_API_URL=${BACKEND_HOST}
+      - REACT_APP_API_URL=http://${BACKEND_HOST}:3000
     working_dir: /app
     volumes:
       - ./front2:/app
