--- a/front2/package.json
+++ b/front2/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "front2": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "PORT=4200 react-scripts start",
+    "start": "react-scripts start",
     "build": "PORT=4200 react-scripts build",
     "test": "PORT=4200 react-scripts test",
     "eject": "PORT=4200 react-scripts eject"
