--- a/front2/package.json
+++ b/front2/package.json
@@ -11,7 +11,7 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=4200 react-scripts start",
     "build": "PORT=4200 react-scripts build",
     "test": "PORT=4200 react-scripts test",
     "eject": "PORT=4200 react-scripts eject"
