--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: node:22.12
     ports:
       - "80:3000"
-    command: bash -c "npm install && npm run build && npm run start"
+    command: bash -c "npm install && npm run start"
     environment:
       - REACT_APP_API_URL=http://${BACKEND_HOST}:3000
     working_dir: /app
